2008-11-24  Dan Williams  <dcbw@redhat.com>

	* src/nm-pptp-service.c
		- (construct_pppd_args): send username to server (bgo #561941)

2008-11-04  Dan Williams  <dcbw@redhat.com>

	Fix bgo #559152

	* src/nm-pptp-pppd-plugin.c
		- (nm_ip_up): remote peer's address is the PTP address, not the external
			gateway address

	* src/nm-pptp-service.c
		- (construct_pppd_args): allow easier PPP debugging
		- (service_ip4_config_cb): insert the VPN gateway's public IP address
			into the IP4 config
		- (real_connect, real_disconnect, state_changed_cb, dispose): cache
			the connection so that the VPN gateway's public IP address can be
			retrieved from it when the IP4 config comes back from pppd

2008-10-26  Dan Williams  <dcbw@redhat.com>

	* properties/nm-pptp.c
		- Update for setting accessor changes

2008-10-24  Dan Williams  <dcbw@redhat.com>

	* src/nm-pptp-service.c
		- (construct_pppd_args): pppd always parses /etc/ppp/options, so always
			add really important stuff to the command line to ensure that NM
			overrides /etc/ppp/options (bgo #556781)

2008-10-14  Dan Williams  <dcbw@redhat.com>

	* src/nm-pptp-pppd-plugin.c
		- (nm_ip_up): pass VPN gateway up to nm-pptp-service

2008-10-12  Dan Williams  <dcbw@redhat.com>

	Patch from Bin Li <libin.charles@gmail.com>, based on patches by Tambet 
	(openvpn) and Dan (vpnc)

	* common-gnome/*
		- Copy over common keyring functions

	* auth-dialog/Makefile.am
	  auth-dialog/main.c
	  	- Use common keyring functions

	* properties/Makefile.am
	  properties/nm-pptp-dialog.glade
	  properties/nm-pptp.c
	  properties/nm-pptp.h
		- Add a 'password' entry and read/write the password when appropriate

2008-09-29  Dan Williams  <dcbw@redhat.com>

	* properties/nm-pptp-dialog.glade
		- "Domain" -> "NT Domain" to clarify what it's really for

2008-09-29  Dan Williams  <dcbw@redhat.com>

	* src/nm-pptp-serivce.c
		- (impl_pptp_service_need_secrets): use the expected Windows-style
			'domain\\username' format, not whatever I made up